--- a/package.json
+++ b/package.json
@@ -35,5 +35,11 @@
     "vite",
     "vue3",
     "vue"
-  ]
+  ],
+  "dependencies": {
+    "axios": "^1.1.3",
+    "element-plus": "^2.2.19",
+    "mitt": "^3.0.0",
+    "pinia": "^2.0.23"
+  }
 }
